<resources>
    <string name="app_name">sasaKazi</string>
    <string name="title_home">Home</string>
    <string name="title_contacts">Contacts</string>
    <string name="title_blog">Our Blog</string>
    <string name="logo">Logo</string>
    <string name="splash_txt">equip yourself with employable skills</string>
    <string name="title_splash">Splash</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="email_address">Email Address</string>
    <string name="sign_up">Sign Up</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="phone_number">Phone Number</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="request_password_reset_email">Request password reset email</string>
    <string name="password_reset">Password Reset !!!</string>
    <string name="nav_header_title">Username</string>
    <string name="nav_header_subtitle">email@example.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="logout">LogOut</string>
    <string name="profile">Profile</string>
    <string name="full_name">Full Name</string>
    <string name="ic">IC</string>
    <string name="my_courses">My Courses</string>
    <string name="notifications">Notifications</string>
    <string name="_254_123_456_789">(+254) 123 456 789</string>
    <string name="_3">(3)</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="add_bio">Add Bio</string>
    <string name="update_profile">Update Profile</string>
    <string name="add_your_headline">add your headline</string>
    <string name="mobile_app_dev">Mobile App Development</string>
    <string name="explore_more"><![CDATA[Explore more >>>]]></string>
    <string name="game_development">Scratch Game Development</string>
    <string name="web_development">Web Development</string>
    <string name="digital_marketing">Digital Marketing</string>
    <string name="data_science">Data Science</string>
    <string name="course_objective">Course Objective</string>
    <string name="description_hint">Course objective description here</string>
    <string name="instructor">Instructor</string>
    <string name="instructor_name">Instructor name</string>
    <string name="certification_conditions">Certification</string>
    <string name="awarded_when">Awarded When:</string>
    <string name="course_info">Course Info</string>
    <string name="conditions">Conditions …</string>
    <string name="course_name">Course Name</string>
    <string name="mobile_obj">Mobile App Development</string>
    <string name="objective">Objectives</string>
    <string name="resources">Resources</string>
    <string name="discussion">Discussions</string>
    <string name="assignment">Assignment</string>
    <string name="resource_description">Resource description…</string>
    <string name="links">Links</string>
    <string name="books">Books</string>
    <string name="transcripts">Transcripts</string>
    <string name="assignment_description">Assignment Description</string>
    <string name="exercises">Exercises</string>
    <string name="ex_1">Ex 1</string>
    <string name="tasks">Tasks</string>
    <string name="task_1">Task 1</string>
    <string name="discussion_description">We encourage peer learning, so feel free to participate in the class forum. Ask or answer questions related to the course here.</string>
    <string name="enter_message_here">Enter message here</string>
    <string name="send_message_btn">send message btn</string>
    <string name="receiver_text">Receiver Text</string>
    <string name="sender_text">Sender Text</string>
    <string name="sender_name">Sender Name</string>
    <string name="upload_img">upload img</string>
    <string name="message_img">message img</string>
    <string name="phone_call">Phone call</string>
    <string name="youtube_stream_img">youtube stream img</string>
    <string name="join_live_classes_here">Join Live Classes Here</string>
    <string name="live_classroom">Live Classroom</string>
    <string name="online_safety">Online Safety</string>
    <string name="march_29_2021">March 29, 2021</string>
    <string name="by">By</string>
    <string name="publisher_name">Publisher Name</string>
    <string name="blog_img">blog img</string>
    <string name="blog_title_here">Blog Title Here</string>
    <string name="read_more"><![CDATA[Read More >>>]]></string>
    <string name="blog_body">Blog body</string>
</resources>