<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#C4C4C4"
    tools:context=".users.SignupActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="0dp"
        android:contentDescription="@string/logo"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logo"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:gravity="center"
        android:textSize="24sp"
        android:fontFamily="sans-serif"
        android:textStyle="bold"
        android:textColor="@color/welcome_txt_color"
        android:text="@string/sign_up" />

    <EditText
        android:id="@+id/fullname_edittext"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:padding="8dp"
        android:background="@drawable/rounded_edittext"
        android:layout_below="@+id/signup"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/full_name"
        android:fontFamily="sans-serif"
        android:textStyle="bold"
        android:textColor="@color/welcome_txt_color"
        android:autofillHints="" />

    <EditText
        android:id="@+id/email_edittext"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:padding="8dp"
        android:background="@drawable/rounded_edittext"
        android:layout_below="@+id/fullname_edittext"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:hint="@string/email_address"
        android:fontFamily="sans-serif"
        android:textStyle="bold"
        android:textColor="@color/welcome_txt_color"
        android:importantForAutofill="yes"
        android:autofillHints="" />

    <EditText
        android:id="@+id/phone_edittext"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:padding="8dp"
        android:background="@drawable/rounded_edittext"
        android:layout_below="@+id/email_edittext"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        android:ems="10"
        android:inputType="phone"
        android:hint="@string/phone_number"
        android:fontFamily="sans-serif"
        android:textStyle="bold"
        android:textColor="@color/welcome_txt_color"
        android:autofillHints="" />

    <EditText
        android:id="@+id/password_edittext"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:padding="8dp"
        android:background="@drawable/rounded_edittext"
        android:layout_below="@+id/phone_edittext"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:fontFamily="sans-serif"
        android:textStyle="bold"
        android:textColor="@color/welcome_txt_color"
        android:importantForAutofill="yes"
        android:autofillHints="password" />

    <EditText
        android:id="@+id/confirmpassword_edittext"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:padding="8dp"
        android:background="@drawable/rounded_edittext"
        android:layout_below="@+id/password_edittext"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/confirm_password"
        android:fontFamily="sans-serif"
        android:textStyle="bold"
        android:textColor="@color/welcome_txt_color"
        android:importantForAutofill="yes"
        android:autofillHints="password" />

    <Button
        android:id="@+id/create_account_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/confirmpassword_edittext"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        android:fontFamily="sans-serif"
        android:text="@string/create_account"
        android:backgroundTint="#31344E"
        android:textColor="#FFFF" />

    <TextView
        android:id="@+id/txt_signupquery"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_below="@+id/create_account_button"
        android:layout_alignParentStart="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:fontFamily="sans-serif"
        android:text="@string/already_have_an_account"
        android:textColor="@color/welcome_txt_color"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/to_signup"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_below="@+id/create_account_button"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="100dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        android:fontFamily="sans-serif"
        android:text="@string/sign_in"
        android:textColor="#2C3EA2"
        android:textSize="18sp"
        android:textStyle="bold"
        android:onClick="intentToLogin"/>

</RelativeLayout>