<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/solid_background"
    tools:context=".ui.navdrawer.ProfileActivity">

    <ImageView
        android:id="@+id/user_profilePicture"
        android:layout_width="239dp"
        android:layout_height="141dp"
        android:layout_marginTop="50dp"
        android:contentDescription="@string/profile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/baseline_account_circle_white_48dp" />

    <ImageView
        android:id="@+id/user_imgIC"
        android:layout_width="20dp"
        android:layout_height="19dp"
        android:layout_marginStart="8dp"
        android:contentDescription="@string/profile"
        app:layout_constraintBottom_toBottomOf="@+id/user_profilePicture"
        app:layout_constraintEnd_toEndOf="@+id/user_profilePicture"
        app:layout_constraintHorizontal_bias="0.72"
        app:layout_constraintStart_toStartOf="@+id/user_profilePicture"
        app:layout_constraintTop_toTopOf="@+id/user_profilePicture"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/baseline_photo_camera_white_18dp" />

    <TextView
        android:id="@+id/user_profileFullName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="sans-serif"
        android:gravity="center"
        android:hint="@string/full_name"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_profilePicture" />

    <TextView
        android:id="@+id/user_profilePhoneNo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="sans-serif"
        android:gravity="center"
        android:hint="@string/_254_123_456_789"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_profileFullName" />

    <Button
        android:id="@+id/user_profileBtn"
        android:layout_width="146dp"
        android:layout_height="38dp"
        android:layout_marginTop="20dp"
        android:drawableEnd="@drawable/baseline_edit_white_18dp"
        android:text="@string/edit_profile"
        android:textAllCaps="false"
        android:textSize="14sp"
        android:gravity="center"
        android:backgroundTint="#1D213D"
        android:shadowColor="@color/white"
        android:outlineSpotShadowColor="@color/white"
        app:layout_constraintCircleRadius="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_profilePhoneNo"
        tools:targetApi="p" />

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="24dp"
        android:background="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_profileBtn" />

    <ImageView
        android:id="@+id/bookmark_IC"
        android:layout_width="30dp"
        android:layout_height="50dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/ic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view"
        app:srcCompat="@drawable/baseline_bookmark_white_24dp" />

    <TextView
        android:id="@+id/myCourses"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="30dp"
        android:fontFamily="sans-serif"
        android:text="@string/my_courses"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/bookmark_IC"
        app:layout_constraintTop_toBottomOf="@+id/view" />

    <ImageView
        android:id="@+id/notificationBell"
        android:layout_width="30dp"
        android:layout_height="50dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/ic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bookmark_IC"
        app:srcCompat="@drawable/baseline_notifications_white_24dp" />

    <TextView
        android:id="@+id/notificationsValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="45dp"
        android:fontFamily="sans-serif"
        android:text="@string/_3"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/notificationBell"
        app:layout_constraintTop_toBottomOf="@+id/myCourses" />

    <TextView
        android:id="@+id/notificationTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="45dp"
        android:fontFamily="sans-serif"
        android:text="@string/notifications"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/notificationsValue"
        app:layout_constraintTop_toBottomOf="@+id/myCourses" />

</androidx.constraintlayout.widget.ConstraintLayout>