<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/blogCard"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/blogOverviewImg"
                android:layout_width="match_parent"
                android:layout_height="170dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="0dp"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="0dp"
                android:scaleType="fitXY"
                android:contentDescription="@string/blog_img" />

            <TextView
                android:id="@+id/blogPublishDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/blogOverviewImg"
                android:layout_alignParentStart="true"
                android:layout_marginStart="8dp"
                android:fontFamily="sans-serif"
                android:hint="@string/march_29_2021"
                android:textColor="@color/welcome_txt_color"
                android:textSize="16sp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/blogOverviewImg"
                android:layout_marginStart="16dp"
                android:layout_toEndOf="@+id/blogPublishDate"
                android:fontFamily="sans-serif"
                android:text="@string/by"
                android:textColor="@color/welcome_txt_color"
                android:textSize="16sp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/blogPublisherName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/blogOverviewImg"
                android:layout_marginStart="8dp"
                android:layout_toEndOf="@+id/textView8"
                android:fontFamily="sans-serif"
                android:hint="@string/publisher_name"
                android:textColor="@color/welcome_txt_color"
                android:textSize="16sp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/blogTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/blogPublishDate"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:hint="@string/blog_title_here"
                android:textColor="@color/welcome_txt_color"
                android:textSize="16sp"
                android:textStyle="bold"
                android:fontFamily="sans-serif"/>

            <Button
                android:id="@+id/blogReadMore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/blogTitle"
                android:layout_alignParentStart="true"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:backgroundTint="#03B9D0"
                android:fontFamily="sans-serif"
                android:text="@string/read_more"
                android:textAllCaps="false"
                tools:targetApi="lollipop" />

        </RelativeLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>